Refactor RedactController; add execute endpoint
Replace the large in-controller redaction implementation with service delegations and add a unified /redact-execute endpoint. RedactController now delegates manual, text, and execution logic to ManualRedactionService, TextRedactionService and RedactExecuteService, registers JSON property editors for complex request fields, and centralizes filename generation. Many internal helpers and token/text-processing methods were removed from the controller in favor of service implementations. Also applied small API/implementation fixes: swapped Paths.get -> Path.of in tests and server keystore path, updated imports, and adjusted response/file handling to use the new services.